# adventofcode

./: AdventOfCode.sln  Program.cs  README.md
Advent2022/: Day1.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs
Utils/: IPuzzle.cs  Runner.cs
cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/2023/: Advent2023.h
cpp/2023/Day01/: Day01.cpp  Day01.h
cpp/2023/Day02/: Day02.cpp  Day02.h
cpp/utils/: Advent.h  Global.h  Problem.h  Runner.cpp  Runner.h
cpp/utils/template/: Day0X.cpp  Day0X.h
